Implement ad revenue & update callback

--- a/lib/src/main/res/layout/lolib_activity_main.xml
+++ b/lib/src/main/res/layout/lolib_activity_main.xml
@@ -10,13 +10,11 @@
         android:id="@+id/browser"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/frAds"
+        app:layout_constraintBottom_toTopOf="@+id/banner"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <FrameLayout
-        android:id="@+id/frAds"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <include
+        android:id="@+id/banner"
+        layout="@layout/ads_banner"
         app:layout_constraintBottom_toBottomOf="parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
