--- a/lib/src/main/res/layout/lolib_activity_main.xml
+++ b/lib/src/main/res/layout/lolib_activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.LOActivity">
+    tools:context=".LOActivity">
 
     <org.libreoffice.androidlib.webview.COWebView
         android:id="@+id/browser"
@@ -15,6 +15,10 @@
 
     <include
         android:id="@+id/banner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         layout="@layout/ads_banner"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
